syntax = "proto3";
option go_package="./protos";
package proto;

message CreateUserRequest {
    // @gotags: validate:"required"
    // FirstName
    string FirstName = 1;

    // @gotags: validate:"required"
    // LastName
    string LastName = 2;

    // @gotags: validate:"gte=0,lte=130"
    // 年龄
    int32 Age = 3;

    // @gotags: validate:"required,email"
    string Email = 4;

    // @gotags: validate:"iscolor"
    // alias for 'hexcolor|rgb|rgba|hsl|hsla'
    string FavouriteColor = 5;

    // @gotags: validate:"datetime=2006-01-02"
    // 时间的格式，参考go原生库的time
    string CreateTime = 6;
}

message Response {
    string code = 1;
    string msg = 2;
}